--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "virzon-front": {
+    "chapeau-front": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/virzon-front",
+            "outputPath": "dist/chapeau-front",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -45,18 +45,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "virzon-front:build"
+            "browserTarget": "chapeau-front:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "virzon-front:build:production"
+              "browserTarget": "chapeau-front:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "virzon-front:build"
+            "browserTarget": "chapeau-front:build"
           }
         },
         "test": {
@@ -80,7 +80,7 @@
         }
       }
     },
-    "virzon-front-e2e": {
+    "chapeau-front-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -88,7 +88,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "virzon-front:serve"
+            "devServerTarget": "chapeau-front:serve"
           }
         },
         "lint": {
@@ -101,5 +101,5 @@
       }
     }
   },
-  "defaultProject": "virzon-front"
+  "defaultProject": "chapeau-front"
 }
